# ryzenai-serve

./: .gitignore  ISSUES.md  README.md  SHOWCASE.md  pyproject.toml
scripts/: nightly_dream.sh  probe_all_models_oga.py  test_cerebro_integration.sh
src/ryzenai_serve/: __init__.py  __main__.py  embedder.py  engine.py  server.py
src/ryzenai_serve/static/: chat.html
tests/: test_smoke.py  test_vision.py
